--- a/index.html
+++ b/index.html
@@ -95,9 +95,10 @@
                         class="col-lg-7 pr-0 mr-0 pl-lg-0 pr-lg-5 mr-lg-0 mt-3 mt-lg-0 align-items-center justify-content-center align-items-lg-left justify-content-lg-left text-center text-lg-left d-flex order-1 order-lg-0 pb-5">
                         <div class="infohero mt-5">
                             <p class="infohero__p d-none">Hola, soy</p>
-                            <h1 class="infohero__title">Tu punto de encuentro 
+                            <h1 class="infohero__title h1_primera_seccion">Tu punto de encuentro 
                                 <span>para bienes de valor</span>
                             </h1>
+                            <br>
                             <span id="typed-text" ></span>
                             <span class="cursor blink ">&nbsp;</span>
                         </div>
@@ -122,17 +123,14 @@
                 <div class="row">
                     <div class="col-lg-4 text-center text-lg-left">
                         <div class="abouthero">
-                            <h3 style="font-style:italic">Quien Soy ...</h3>
+                            <!-- <h3 style="font-style:italic "><span>Nexus Trading</span></h3> -->
+                            <img src="./asset/page/nexus_trading.png" alt="poto" class="img-fluid heroimg__poto logo_mobile_segunda_seccion" />
                         </div>
                     </div>
                     <div class="col-lg-8 pl-lg-5 text-center text-lg-left">
                         <div class="infoabout">
                             <p class="infoabout__title" style="text-align: justify;">
-                                Tengo más de una década de experiencia en el mercado. Me especializo en la venta de
-                                propiedades residenciales y de lujo, me enfoco en estrategias de marketing efectivas y
-                                negociaciones precisas para garantizar que cada cliente obtenga el máximo valor por su
-                                inmueble. Mi reputación se basa en la honestidad y un servicio excepcional, asegurando
-                                un proceso de venta exitoso y sin complicaciones.
+                                Nuestra pasión es conectar a las personas con sus próximos grandes activos. Después de más de 15 años en el mercado, fundé Nexus Trading con una visión clara: ser la plataforma de confianza que une la calidad con la oportunidad, sin importar si buscas tu nuevo hogar, una herramienta para tu negocio o el auto de tus sueños.
                             </p>
                             <p class="infoabout__title" style="text-align: justify;">Gestiono de principio a fin la adquisición de tu propiedad, a
                                 través de la gestoría de créditos hipotecarios (Infonavit, Fovissste, bancario, ISSEG,
