--- a/index.html
+++ b/index.html
@@ -7,21 +7,21 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- title -->
-    <title>Felipe De Leon - Broker Inmobiliario</title>
+    <title>Nexus Trading - Conectando Oportunidades</title>
     <!-- favicon -->
-    <link rel="icon" type="image/png" sizes="32x32" href="./asset/hero/3.jpg">
-    <link rel="icon" type="image/png" sizes="16x16" href="./asset/hero/3.jpg">
+    <link rel="icon" type="image/png" sizes="32x32" href="./asset/hero/nexus_trading_sin_fondo.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="./asset/hero/nexus_trading_sin_fondo.png">
     <link rel="shortcut icon" href="">
     <!-- metatag -->
     <meta name="author" content="Rama Hardian Sidik" />
-    <meta property="og:title" content="Felipe De Leon - Broker Inmobiliario" />
+    <meta property="og:title" content="Nexus Trading - Conectando Oportunidades" />
     <meta property="og:url" content="" />
     <meta property="og:image" content="" />
-    <meta property="og:description" content="Felipe De Leon - Broker Inmobiliario" />
+    <meta property="og:description" content="Nexus Trading - Conectando Oportunidades" />
     <meta property="og:site_name" content="Freeman template" />
     <meta name="twitter:card" content="summary">
-    <meta name="twitter:title" content="Felipe De Leon - Broker Inmobiliario">
-    <meta name="twitter:description" content="Felipe De Leon - Broker Inmobiliario">
+    <meta name="twitter:title" content="Nexus Trading - Conectando Oportunidades">
+    <meta name="twitter:description" content="Nexus Trading - Conectando Oportunidades">
     <meta name="twitter:image" content="">
     <meta id="tw_url" name="twitter:url" content="">
     <!-- main style -->
@@ -128,19 +128,16 @@
                         </div>
                     </div>
                     <div class="col-lg-8 pl-lg-5 text-center text-lg-left">
-                        <div class="infoabout">
+                        <div class="infoabout mt-3">
                             <p class="infoabout__title" style="text-align: justify;">
-                                Nuestra pasión es conectar a las personas con sus próximos grandes activos. Después de más de 15 años en el mercado, fundé Nexus Trading con una visión clara: ser la plataforma de confianza que une la calidad con la oportunidad, sin importar si buscas tu nuevo hogar, una herramienta para tu negocio o el auto de tus sueños.
+                                Nuestra pasión es conectar a las personas con sus próximos grandes activos. Nexus Trading tiene una visión clara: ser la plataforma de confianza que une la calidad con la oportunidad, sin importar si buscas tu nuevo hogar, una herramienta para tu negocio o el auto de tus sueños.
                             </p>
-                            <p class="infoabout__title" style="text-align: justify;">Gestiono de principio a fin la adquisición de tu propiedad, a
-                                través de la gestoría de créditos hipotecarios (Infonavit, Fovissste, bancario, ISSEG,
-                                ISFAM). Complementamos nuestro servicio con el desarrollo de proyectos de construcción,
-                                remodelación y la elaboración de planos arquitectónicos.</p>
+                            <p class="infoabout__title" style="text-align: justify;">Nustra reputación se basa en la honestidad y un servicio excepcional, asegurando que cada transacción —ya sea la compra de una propiedad, la venta de un vehículo o la adquisición de un equipo tecnológico— sea un proceso transparente y sin complicaciones.</p>
                             <div class="row  text-center text-lg-left">
                                 <div class="col-lg-6">
-                                    <a href="https://wa.me/5214777531387?text=Hola,%20me%20gustaría%20recibir%20más%20información%20sobre%20sus%20servicios."
+                                    <a href="https://wa.me/5214793153325?text=Hola,%20me%20gustaría%20recibir%20más%20información%20sobre%20sus%20servicios."
                                         class="btn linkbtn aboutlink mt-4" target="_blank">
-                                        Contáctame
+                                        Contáctanos
                                     </a>
                                 </div>
 
@@ -169,7 +166,7 @@
                             <div class="col-lg-4">
                                 <div class="counterwrap">
                                     <p class="counterwrap__counternum"><span class="counterwrap__counter"
-                                            data-Speed="5000">15</span><span class="icon">+</span></p>
+                                            data-Speed="5000">10</span><span class="icon">+</span></p>
                                     <p>Años de Experiencia
                                     </p>
                                 </div>
@@ -195,25 +192,25 @@
                             <div class="wrapservice keen-slider__slide text-center text-lg-left">
                                 <i class="fa-solid fa-scale-balanced"></i>
                                 <h3 class="mt-3 wrapservice__title"> Valuación Profesional</h3>
-                                <p>Realizamos un análisis de mercado detallado y preciso para determinar el valor óptimo
+                                <p class="text-white">Realizamos un análisis de mercado detallado y preciso para determinar el valor óptimo
                                     de tu propiedad, asegurando que tu inversión se venda al precio justo.</p>
                             </div>
                             <div class="wrapservice keen-slider__slide text-center text-lg-left">
                                 <i class="fa-solid fa-file-contract"></i>
                                 <h3 class="mt-3 wrapservice__title">Asesoría Legal y Administrativa</h3>
-                                <p>Te acompañamos en cada paso del proceso de venta, desde la revisión de documentos
+                                <p class="text-white">Te acompañamos en cada paso del proceso de venta, desde la revisión de documentos
                                     hasta la firma, garantizando un proceso fluido, seguro y sin complicaciones.</p>
                             </div>
                             <div class="wrapservice keen-slider__slide text-center text-lg-left">
                                 <i class="fa-solid fa-handshake"></i>
                                 <h3 class="mt-3 wrapservice__title"> Negociación Experta</h3>
-                                <p>Representamos tus intereses con habilidad y experiencia para obtener el mejor acuerdo
+                                <p class="text-white">Representamos tus intereses con habilidad y experiencia para obtener el mejor acuerdo
                                     posible, tanto en el precio como en las condiciones de la transacción.</p>
                             </div>
                             <div class="wrapservice keen-slider__slide text-center text-lg-left">
                                 <i class="fa-solid fa-camera-retro"></i>
                                 <h3 class="mt-3 wrapservice__title"> Home Staging y Fotografía</h3>
-                                <p>Preparamos tu propiedad para el mercado con asesoría profesional y fotografías de
+                                <p class="text-white">Preparamos tu propiedad para el mercado con asesoría profesional y fotografías de
                                     impacto que resalten sus mejores atributos y atraigan a más compradores.</p>
                             </div>
                         </div>
@@ -237,9 +234,9 @@
                         <div class="warpfilter text-left">
                             <ul id="filterwrap"
                                 class="warpfilter__filter justify-content-left text-center text-lg-left">
-                                <li data-group="all" class="active">Propiedades</li>
-                                <!-- <li data-group="web">Web Design</li>
-                                <li data-group="branding">Branding</li> -->
+                                <li data-group="all" class="active">Todos</li>
+                                <li data-group="web">AZUA</li>
+                                <li data-group="branding">Terrenos</li>
                             </ul>
                         </div>
                         <!-- end filter portfolio -->
@@ -329,27 +326,25 @@
                             <h3 class="contactdetail__title mb-4">
                                 Hablemos de tu próximo paso
                             </h3>
-                            <p>Nuestro equipo de expertos está listo para ayudarte a alcanzar tus metas. Ya sea que
-                                busques vender tu propiedad al mejor precio o encontrar la casa de tus sueños, te
-                                guiaremos con profesionalismo en cada etapa del camino.</p>
+                            <p>Nuestro equipo de expertos está listo para ayudarte a alcanzar tus metas. Ya sea que busques vender tu propiedad, encontrar el auto de tus sueños, o adquirir el equipo ideal para tu negocio, te guiaremos con profesionalismo en cada etapa del camino.</p>
                             <ul class="contactdetail__list">
                                 <li>
                                     <span class="contactdetail__span">
-                                        Efren Revolledos No.122, Col. Prado Hermoso C.P.37490, Leon Gto.
+                                        Circuito Jardín del Delfin No.234-A, Col. Jardines de Versalles C.P.37544, Leon Gto.
                                     </span>
                                 </li>
                                 <li>
                                     <span class="contactdetail__span">
-                                        477 753 1387
+                                        479 315 3325
                                     </span>
                                 </li>
                                 <li>
                                     <span class="contactdetail__span">
-                                        felipe08246@hotmail.com
+                                        direccion@ccvedu.org
                                     </span>
                                 </li>
                             </ul>
-                            <ul class="contactdetail__sosmed d-none">
+                            <ul class="contactdetail__sosmed ">
                                 <li>
                                     <a href="#">
                                         <i class="fa-brands fa-facebook"></i>
@@ -400,7 +395,7 @@
                     </div>
                 </div>
             </div>
-            <p class="text-center"><b>Copyright 2025 by Felipe De Leon</b> | Design:<a
+            <p class="text-center"><b>Copyright 2025 by Nexus Trading</b> | Design:<a
                     href="https://www.oshergroup.app/">OSHER GROUP</a> </p>
         </div>
         <!-- end contact section -->
