--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
     <!-- PRELOADER -->
     <div class="preloader">
         <div class="preloader__img">
-            <img src="./asset/hero/logo_felipe.png" alt="logopage" class="img-fluid" />
+            <img src="./asset/hero/nexus_trading_sin_fondo.png" alt="logopage" class="img-fluid" />
         </div>
     </div>
     <!-- main wrap -->
